category check in trophy controller
